--- a/src/stylesheets/para.css
+++ b/src/stylesheets/para.css
@@ -24,7 +24,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255,255,255,.4);
+    background-color: rgba(255, 255, 255, .4);
 }
 
 canvas {
