--- a/src/stylesheets/para.css
+++ b/src/stylesheets/para.css
@@ -20,11 +20,12 @@ body {
 
 .pr-screen {
     position: fixed;
-    top: 120px; /** FIXME **/
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, .4);
+    background-color: white;
+    box-sizing: border-box;
 }
 
 canvas {
