--- a/tmpl/hbs/slide.html.hbs
+++ b/tmpl/hbs/slide.html.hbs
@@ -10,11 +10,11 @@
 <meta charset="utf-8"/>
 <title>{{title}}</title>
 {{#each js}}<!-- Copied from {{filename}} -->
-<script>{{content}}</script>
+<script>{{{content}}}</script>
 {{/each}}
 
 {{#each css}}<!-- Copied from {{filename}} -->
-<style>{{content}}</style>
+<style>{{{content}}}</style>
 {{/each}}
 <head>
 
