--- a/assets/parari.css
+++ b/assets/parari.css
@@ -6,7 +6,26 @@
 
 
 
+body {
+    max-width: 960px;
+    margin: 0 auto;
+    text-align: right;
+    font-size: 2em;
+}
 
+h1, h2, h3 {
+    text-align: left;
+}
+
+p, ul {
+    max-width: 600px;
+    display: inline-block;
+}
+
+li {
+    text-align: left;
+    min-width: 200px;
+}
 
 
 
