--- a/assets/parari.css
+++ b/assets/parari.css
@@ -9,22 +9,34 @@
 body {
     max-width: 960px;
     margin: 0 auto;
-    text-align: right;
     font-size: 2em;
+    color: #555;
+}
+
+a {
+    color: #38A;
+    text-decoration: none;
 }
 
 h1, h2, h3 {
-    text-align: left;
+    clear: both;
+    margin: 0;
+    padding: 20px 0;
 }
 
 p, ul {
     max-width: 600px;
-    display: inline-block;
+    margin: 0 0 0 auto;
+
 }
 
 li {
     text-align: left;
-    min-width: 200px;
+    min-width: 120px;
+}
+
+.pr-page {
+    padding: 10px 10px 20px;
 }
 
 
