--- a/assets/src/parari.css/base.css
+++ b/assets/src/parari.css/base.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #333;
+}
+
 body {
     max-width: 960px;
     margin: 0 auto;
@@ -6,7 +10,7 @@ body {
 }
 
 a {
-    color: #38A;
+    color: #333;
     text-decoration: none;
 }
 
@@ -28,5 +32,6 @@ li {
 }
 
 .pr-page {
-    padding: 10px 10px 20px;
+    padding: 20px 40px 20px;
+    min-height: 600px;
 }
