modify doc [ci skip]

--- a/assets/src/parari.css/.theme-rainbow.css.hbs
+++ b/assets/src/parari.css/.theme-rainbow.css.hbs
@@ -1,3 +1,9 @@
+{{#each componentStyles}}
+{{selector}}{
+    {{#each values}}{{@key}}: {{this}};
+    {{/each}}
+}
+{{/each}}
 
 {{#each pageStyles}}{{#each this}}
 {{selector}}{
