--- a/assets/parari.css
+++ b/assets/parari.css
@@ -13,8 +13,10 @@ html {
 body {
     max-width: 960px;
     margin: 0 auto;
-    font-size: 2em;
+    font-size: 2.2em;
     color: #555;
+    font-family: sans-serif;
+    font-weight: 100 !important;
 }
 
 a {
@@ -24,14 +26,19 @@ a {
 
 h1, h2, h3 {
     clear: both;
-    margin: 0;
-    padding: 20px 0;
+    padding: 40px 0;
+    float: right;
+    font-size: 3em;
+    margin: 60px 0;
+    text-align: right;
+    max-width: 640px;
+
+    font-family: sans-serif;
+    font-weight: 100 !important;
 }
 
 p, ul {
     max-width: 600px;
-    margin: 0 0 0 auto;
-
 }
 
 li {
@@ -40,152 +47,240 @@ li {
 }
 
 .pr-page {
-    padding: 20px 40px 20px;
-    min-height: 600px;
+    padding: 40px;
+    min-height: 480px;
+}
+
+
+.pr-theme-rainbow img{
+    opacity: 0.9;
+    box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.1);
+    
 }
 
 
 
-.pr-theme-rainbow .pr-page:nth-child(9n+0){
-    background-color: #bfa660;
+.pr-theme-rainbow .pr-page:nth-child(14n+0){
+    background-color: #bf8b60;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+0) h1, .pr-theme-rainbow .pr-page:nth-child(9n+0) h2, .pr-theme-rainbow .pr-page:nth-child(9n+0) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+0) h1, .pr-theme-rainbow .pr-page:nth-child(14n+0) h2, .pr-theme-rainbow .pr-page:nth-child(14n+0) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+0) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+0) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+1){
-    background-color: #80bf60;
+.pr-theme-rainbow .pr-page:nth-child(14n+1){
+    background-color: #bfa360;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+1) h1, .pr-theme-rainbow .pr-page:nth-child(9n+1) h2, .pr-theme-rainbow .pr-page:nth-child(9n+1) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+1) h1, .pr-theme-rainbow .pr-page:nth-child(14n+1) h2, .pr-theme-rainbow .pr-page:nth-child(14n+1) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+1) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+1) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+2){
-    background-color: #6078bf;
+.pr-theme-rainbow .pr-page:nth-child(14n+2){
+    background-color: #bfbc60;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+2) h1, .pr-theme-rainbow .pr-page:nth-child(9n+2) h2, .pr-theme-rainbow .pr-page:nth-child(9n+2) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+2) h1, .pr-theme-rainbow .pr-page:nth-child(14n+2) h2, .pr-theme-rainbow .pr-page:nth-child(14n+2) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+2) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+2) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+3){
-    background-color: #bf60b6;
+.pr-theme-rainbow .pr-page:nth-child(14n+3){
+    background-color: #94bf60;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+3) h1, .pr-theme-rainbow .pr-page:nth-child(9n+3) h2, .pr-theme-rainbow .pr-page:nth-child(9n+3) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+3) h1, .pr-theme-rainbow .pr-page:nth-child(14n+3) h2, .pr-theme-rainbow .pr-page:nth-child(14n+3) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+3) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+3) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+4){
-    background-color: #bf8c60;
+.pr-theme-rainbow .pr-page:nth-child(14n+4){
+    background-color: #60bf82;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+4) h1, .pr-theme-rainbow .pr-page:nth-child(9n+4) h2, .pr-theme-rainbow .pr-page:nth-child(9n+4) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+4) h1, .pr-theme-rainbow .pr-page:nth-child(14n+4) h2, .pr-theme-rainbow .pr-page:nth-child(14n+4) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+4) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+4) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+5){
-    background-color: #bfbf60;
+.pr-theme-rainbow .pr-page:nth-child(14n+5){
+    background-color: #6090bf;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+5) h1, .pr-theme-rainbow .pr-page:nth-child(9n+5) h2, .pr-theme-rainbow .pr-page:nth-child(9n+5) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+5) h1, .pr-theme-rainbow .pr-page:nth-child(14n+5) h2, .pr-theme-rainbow .pr-page:nth-child(14n+5) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+5) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+5) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+6){
-    background-color: #60bfa3;
+.pr-theme-rainbow .pr-page:nth-child(14n+6){
+    background-color: #7a64bf;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+6) h1, .pr-theme-rainbow .pr-page:nth-child(9n+6) h2, .pr-theme-rainbow .pr-page:nth-child(9n+6) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+6) h1, .pr-theme-rainbow .pr-page:nth-child(14n+6) h2, .pr-theme-rainbow .pr-page:nth-child(14n+6) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+6) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+6) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+7){
-    background-color: #8560bf;
+.pr-theme-rainbow .pr-page:nth-child(14n+7){
+    background-color: #a860bf;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+7) h1, .pr-theme-rainbow .pr-page:nth-child(9n+7) h2, .pr-theme-rainbow .pr-page:nth-child(9n+7) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+7) h1, .pr-theme-rainbow .pr-page:nth-child(14n+7) h2, .pr-theme-rainbow .pr-page:nth-child(14n+7) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+7) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+7) a{
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+8){
-    background-color: #bf6060;
+.pr-theme-rainbow .pr-page:nth-child(14n+8){
+    background-color: #bf608f;
     color: #FFF;
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+8) h1, .pr-theme-rainbow .pr-page:nth-child(9n+8) h2, .pr-theme-rainbow .pr-page:nth-child(9n+8) h3{
-    color: rgba(255,255,255,0.5);
+.pr-theme-rainbow .pr-page:nth-child(14n+8) h1, .pr-theme-rainbow .pr-page:nth-child(14n+8) h2, .pr-theme-rainbow .pr-page:nth-child(14n+8) h3{
+    color: rgba(255,255,255,0.33);
     
 }
 
-.pr-theme-rainbow .pr-page:nth-child(9n+8) a{
+.pr-theme-rainbow .pr-page:nth-child(14n+8) a{
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+9){
+    background-color: #bf7960;
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+9) h1, .pr-theme-rainbow .pr-page:nth-child(14n+9) h2, .pr-theme-rainbow .pr-page:nth-child(14n+9) h3{
+    color: rgba(255,255,255,0.33);
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+9) a{
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+10){
+    background-color: #bf9860;
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+10) h1, .pr-theme-rainbow .pr-page:nth-child(14n+10) h2, .pr-theme-rainbow .pr-page:nth-child(14n+10) h3{
+    color: rgba(255,255,255,0.33);
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+10) a{
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+11){
+    background-color: #bfb060;
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+11) h1, .pr-theme-rainbow .pr-page:nth-child(14n+11) h2, .pr-theme-rainbow .pr-page:nth-child(14n+11) h3{
+    color: rgba(255,255,255,0.33);
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+11) a{
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+12){
+    background-color: #adbf60;
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+12) h1, .pr-theme-rainbow .pr-page:nth-child(14n+12) h2, .pr-theme-rainbow .pr-page:nth-child(14n+12) h3{
+    color: rgba(255,255,255,0.33);
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+12) a{
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+13){
+    background-color: #6bbf60;
+    color: #FFF;
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+13) h1, .pr-theme-rainbow .pr-page:nth-child(14n+13) h2, .pr-theme-rainbow .pr-page:nth-child(14n+13) h3{
+    color: rgba(255,255,255,0.33);
+    
+}
+
+.pr-theme-rainbow .pr-page:nth-child(14n+13) a{
     color: #FFF;
     
 }
