--- a/assets/src/parari.css/base.css
+++ b/assets/src/parari.css/base.css
@@ -5,8 +5,10 @@ html {
 body {
     max-width: 960px;
     margin: 0 auto;
-    font-size: 2em;
+    font-size: 2.2em;
     color: #555;
+    font-family: sans-serif;
+    font-weight: 100 !important;
 }
 
 a {
@@ -16,14 +18,19 @@ a {
 
 h1, h2, h3 {
     clear: both;
-    margin: 0;
-    padding: 20px 0;
+    padding: 40px 0;
+    float: right;
+    font-size: 3em;
+    margin: 60px 0;
+    text-align: right;
+    max-width: 640px;
+
+    font-family: sans-serif;
+    font-weight: 100 !important;
 }
 
 p, ul {
     max-width: 600px;
-    margin: 0 0 0 auto;
-
 }
 
 li {
@@ -32,6 +39,6 @@ li {
 }
 
 .pr-page {
-    padding: 20px 40px 20px;
-    min-height: 600px;
+    padding: 40px;
+    min-height: 480px;
 }
