--- a/tmpl/hbs/slide.html.hbs
+++ b/tmpl/hbs/slide.html.hbs
@@ -7,6 +7,7 @@
     For more detail, see {{pkg.homepage}}.
 -->
 <html>
+<head>
 <meta charset="utf-8"/>
 <title>{{title}}</title>
 {{#each js}}<!-- Copied from {{filename}} -->
@@ -16,10 +17,18 @@
 {{#each css}}<!-- Copied from {{filename}} -->
 <style>{{{content}}}</style>
 {{/each}}
-<head>
+
+
 
 </head>
-<body class="pr-theme-{{theme}}">
+<body class="pr-theme-{{theme}}" id="parari-slide-root">
 {{{src}}}
+
+
+
 </body>
+<script>
+parari.start('parari-slide-root');
+</script>
+
 </html>
