--- a/assets/parari.css
+++ b/assets/parari.css
@@ -13,7 +13,7 @@ html {
 
 body {
     height: 100%;
-    max-width: 960px;
+    width: 100%;
     padding: 0;
     margin: 0 auto;
     font-size: 2.2em;
@@ -50,9 +50,12 @@ li {
     min-width: 120px;
 }
 
-
-
-
+.pr-src,
+.pr-screen canvas {
+    max-width: 960px;
+    margin: 0 auto;
+    display: block;
+}
 
 .pr-screen {
     position: fixed;
@@ -60,10 +63,8 @@ li {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
     box-sizing: border-box;
-
-    opacity: .5; //FIXME
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .pr-object {
@@ -75,10 +76,19 @@ li {
     box-sizing: border-box;
 }
 
-
 .pr-page {
     padding: 40px;
     min-height: 480px;
+}
+
+.pr-pseudo-img {
+    display: block;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #000000;
 }
 
 
@@ -318,4 +328,10 @@ li {
 
 
 
+
+/***************************************
+ * Borrows normalize.min.css
+ ***************************************/
+
+/*! normalize.css v3.0.1 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:0 0}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}
 
