--- a/tmpl/hbs/slide.html.hbs
+++ b/tmpl/hbs/slide.html.hbs
@@ -28,7 +28,10 @@
 
 </body>
 <script>
-parari.start('parari-slide-root');
+parari.start('parari-slide-root', {
+    vLock:false,
+    hLock:true
+});
 </script>
 
 </html>
