--- a/assets/src/parari.js/.20.layers.js.hbs
+++ b/assets/src/parari.js/.20.layers.js.hbs
@@ -10,18 +10,11 @@
     pr.layers = {
         /** Short names for layers. */
         get _layerNameMap(){
-            return {
-	    resolve: pr.layers.ResolveLayer,
-	    starFlow: pr.layers.StarFlowLayer,
-	    sunLight: pr.layers.SunLightLayer
-	};
+            return {{{layerNameMap}}};
         },
         /** Default layer options. */
         get _layerOptions(){
-            return {
-	    starFlow: {},
-	    sunLight: {}
-	};
+            return {{{layerOptions}}};
         }
     };
 
