--- a/assets/parari.css
+++ b/assets/parari.css
@@ -30,22 +30,32 @@ a {
 
 h1, h2, h3 {
     clear: both;
-    padding: 40px 0;
     display: block;
-    float: right;
     font-size: 3em;
-    margin: 60px 0;
     text-align: right;
     max-width: 640px;
-
     font-family: sans-serif;
     font-weight: 100 !important;
+    position: absolute;
+    right: 40px;
+    padding: 40px 0 80px;
+    margin: 60px 0;
+    box-sizing: border-box;
 }
 
 p, ul {
     max-width: 600px;
     padding-top: 40px;
     padding-bottom: 40px;
+}
+
+pre {
+    background-color: rgba(0, 0, 0, 0.33);
+    padding: 5px 10px;
+}
+
+pre code {
+
 }
 
 li {
