--- a/assets/parari.css
+++ b/assets/parari.css
@@ -33,13 +33,17 @@ h1, h2, h3 {
     display: block;
     font-size: 3em;
     text-align: right;
-    max-width: 640px;
     font-family: sans-serif;
     font-weight: 100 !important;
     position: absolute;
     right: 40px;
-    padding: 40px 0 80px;
     margin: 60px 0;
+    left: auto;
+    width: 100%;
+    text-align: right;
+    line-height: 1em;
+    height: 100%;
+    overflow: hidden;
     box-sizing: border-box;
 }
 
@@ -50,12 +54,14 @@ p, ul {
 }
 
 pre {
+    box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.33);
     padding: 5px 10px;
+    display: block;
 }
 
 pre code {
-
+    display: block;
 }
 
 li {
