--- a/assets/parari.css
+++ b/assets/parari.css
@@ -54,9 +54,10 @@ p, ul {
 }
 
 pre {
-    box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.33);
-    padding: 5px 10px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box;
     display: block;
 }
 
