--- a/assets/src/parari.js/.parari.js.hbs
+++ b/assets/src/parari.js/.parari.js.hbs
@@ -4,15 +4,7 @@
  * @version {{version}}{{#each requires}}
  * @require {{this}} {{/each}}
  */
-window.{{name}} = (function ({{name}}) {
-    "use strict";
-    {{#each files}}
-    {{{this}}}
-    {{/each}}
-
-    return {{name}};
-})(window.{{name}} = window.{{name}} || {});
-
+window.{{name}};
 
 {{#each libraries}}
 //=========================================
@@ -23,3 +15,14 @@ window.{{name}} = (function ({{name}}) {
 ;
 
 {{/each}}
+//=========================================
+//  {{name}}
+//=========================================
+window.{{name}} = (function ({{name}}) {
+"use strict";
+{{#each files}}
+    {{{this}}}
+{{/each}}
+
+return {{name}};
+})(window.{{name}} = window.{{name}} || {});
