--- a/tmpl/hbs/slide.html.hbs
+++ b/tmpl/hbs/slide.html.hbs
@@ -26,11 +26,11 @@
 
 
 </head>
-<body id="parari-slide-root">
-
+<body>
+<div id="parari-slide-root">
 {{{src}}}
+</div>
 
-</body>
 <script>
 parari.start('parari-slide-root', {
     vLock:false,
@@ -47,5 +47,6 @@ parari.start('parari-slide-root', {
     }
 });
 </script>
+</body>
 
 </html>
