--- a/assets/parari.css
+++ b/assets/parari.css
@@ -67,8 +67,9 @@ li {
     min-width: 120px;
 }
 
-.pr-src,
+.pr-root,
 .pr-screen .canvas-container {
+    background-color: #DDD;
     max-width: 960px;
     margin: 0 auto;
     display: block;
@@ -95,7 +96,6 @@ li {
     transition: opacity 300ms ease;
 
     background-color: white;
-/ / FIXME
 }
 
 .pr-screen .lower-canvas {
@@ -127,13 +127,35 @@ li {
     z-index: -1;
 }
 
+.pr-message-div {
+    text-align: center;
+    padding: 12px 10px;
+    background-color: #FDFDFD;
+    color: #B5B5B5;
+    border: 1px solid #B5B5B5;
+    font-family: sans-serif;
+    font-weight: 100 ! important;
+    font-size: 0.5em;
+
+}
+
+.pr-message-div a {
+    color: #598faa;
+}
+
+.pr-message-div .pr-caution {
+    display: block;
+    text-align: center;
+    font-size: 2em;
+    line-height: 1em;
+}
 
 /**
  * Parari rainbow styles.
  */
 
 
-.pr-src img{
+.pr-root img{
     opacity: 0.9;
     box-shadow: 0px 0px 40px rgba(255, 255, 255, 0.3);
     background-color: rgba(255, 255, 255, 0.1);
@@ -142,282 +164,282 @@ li {
 
 
 
-.pr-src .pr-page:nth-child(14n+0){
+.pr-root .pr-page:nth-child(14n+0){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+0) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+0) .pr-page-background{
     background-color: #bf8b60;
     
 }
 
-.pr-src .pr-page:nth-child(14n+0) h1, .pr-src .pr-page:nth-child(14n+0) h2, .pr-src .pr-page:nth-child(14n+0) h3{
+.pr-root .pr-page:nth-child(14n+0) h1, .pr-root .pr-page:nth-child(14n+0) h2, .pr-root .pr-page:nth-child(14n+0) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+0) a{
+.pr-root .pr-page:nth-child(14n+0) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+1){
+.pr-root .pr-page:nth-child(14n+1){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+1) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+1) .pr-page-background{
     background-color: #bfa360;
     
 }
 
-.pr-src .pr-page:nth-child(14n+1) h1, .pr-src .pr-page:nth-child(14n+1) h2, .pr-src .pr-page:nth-child(14n+1) h3{
+.pr-root .pr-page:nth-child(14n+1) h1, .pr-root .pr-page:nth-child(14n+1) h2, .pr-root .pr-page:nth-child(14n+1) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+1) a{
+.pr-root .pr-page:nth-child(14n+1) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+2){
+.pr-root .pr-page:nth-child(14n+2){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+2) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+2) .pr-page-background{
     background-color: #bfbc60;
     
 }
 
-.pr-src .pr-page:nth-child(14n+2) h1, .pr-src .pr-page:nth-child(14n+2) h2, .pr-src .pr-page:nth-child(14n+2) h3{
+.pr-root .pr-page:nth-child(14n+2) h1, .pr-root .pr-page:nth-child(14n+2) h2, .pr-root .pr-page:nth-child(14n+2) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+2) a{
+.pr-root .pr-page:nth-child(14n+2) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+3){
+.pr-root .pr-page:nth-child(14n+3){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+3) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+3) .pr-page-background{
     background-color: #94bf60;
     
 }
 
-.pr-src .pr-page:nth-child(14n+3) h1, .pr-src .pr-page:nth-child(14n+3) h2, .pr-src .pr-page:nth-child(14n+3) h3{
+.pr-root .pr-page:nth-child(14n+3) h1, .pr-root .pr-page:nth-child(14n+3) h2, .pr-root .pr-page:nth-child(14n+3) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+3) a{
+.pr-root .pr-page:nth-child(14n+3) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+4){
+.pr-root .pr-page:nth-child(14n+4){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+4) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+4) .pr-page-background{
     background-color: #60bf82;
     
 }
 
-.pr-src .pr-page:nth-child(14n+4) h1, .pr-src .pr-page:nth-child(14n+4) h2, .pr-src .pr-page:nth-child(14n+4) h3{
+.pr-root .pr-page:nth-child(14n+4) h1, .pr-root .pr-page:nth-child(14n+4) h2, .pr-root .pr-page:nth-child(14n+4) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+4) a{
+.pr-root .pr-page:nth-child(14n+4) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+5){
+.pr-root .pr-page:nth-child(14n+5){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+5) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+5) .pr-page-background{
     background-color: #6090bf;
     
 }
 
-.pr-src .pr-page:nth-child(14n+5) h1, .pr-src .pr-page:nth-child(14n+5) h2, .pr-src .pr-page:nth-child(14n+5) h3{
+.pr-root .pr-page:nth-child(14n+5) h1, .pr-root .pr-page:nth-child(14n+5) h2, .pr-root .pr-page:nth-child(14n+5) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+5) a{
+.pr-root .pr-page:nth-child(14n+5) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+6){
+.pr-root .pr-page:nth-child(14n+6){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+6) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+6) .pr-page-background{
     background-color: #7a64bf;
     
 }
 
-.pr-src .pr-page:nth-child(14n+6) h1, .pr-src .pr-page:nth-child(14n+6) h2, .pr-src .pr-page:nth-child(14n+6) h3{
+.pr-root .pr-page:nth-child(14n+6) h1, .pr-root .pr-page:nth-child(14n+6) h2, .pr-root .pr-page:nth-child(14n+6) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+6) a{
+.pr-root .pr-page:nth-child(14n+6) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+7){
+.pr-root .pr-page:nth-child(14n+7){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+7) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+7) .pr-page-background{
     background-color: #a860bf;
     
 }
 
-.pr-src .pr-page:nth-child(14n+7) h1, .pr-src .pr-page:nth-child(14n+7) h2, .pr-src .pr-page:nth-child(14n+7) h3{
+.pr-root .pr-page:nth-child(14n+7) h1, .pr-root .pr-page:nth-child(14n+7) h2, .pr-root .pr-page:nth-child(14n+7) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+7) a{
+.pr-root .pr-page:nth-child(14n+7) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+8){
+.pr-root .pr-page:nth-child(14n+8){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+8) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+8) .pr-page-background{
     background-color: #bf608f;
     
 }
 
-.pr-src .pr-page:nth-child(14n+8) h1, .pr-src .pr-page:nth-child(14n+8) h2, .pr-src .pr-page:nth-child(14n+8) h3{
+.pr-root .pr-page:nth-child(14n+8) h1, .pr-root .pr-page:nth-child(14n+8) h2, .pr-root .pr-page:nth-child(14n+8) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+8) a{
+.pr-root .pr-page:nth-child(14n+8) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+9){
+.pr-root .pr-page:nth-child(14n+9){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+9) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+9) .pr-page-background{
     background-color: #bf7960;
     
 }
 
-.pr-src .pr-page:nth-child(14n+9) h1, .pr-src .pr-page:nth-child(14n+9) h2, .pr-src .pr-page:nth-child(14n+9) h3{
+.pr-root .pr-page:nth-child(14n+9) h1, .pr-root .pr-page:nth-child(14n+9) h2, .pr-root .pr-page:nth-child(14n+9) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+9) a{
+.pr-root .pr-page:nth-child(14n+9) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+10){
+.pr-root .pr-page:nth-child(14n+10){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+10) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+10) .pr-page-background{
     background-color: #bf9860;
     
 }
 
-.pr-src .pr-page:nth-child(14n+10) h1, .pr-src .pr-page:nth-child(14n+10) h2, .pr-src .pr-page:nth-child(14n+10) h3{
+.pr-root .pr-page:nth-child(14n+10) h1, .pr-root .pr-page:nth-child(14n+10) h2, .pr-root .pr-page:nth-child(14n+10) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+10) a{
+.pr-root .pr-page:nth-child(14n+10) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+11){
+.pr-root .pr-page:nth-child(14n+11){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+11) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+11) .pr-page-background{
     background-color: #bfb060;
     
 }
 
-.pr-src .pr-page:nth-child(14n+11) h1, .pr-src .pr-page:nth-child(14n+11) h2, .pr-src .pr-page:nth-child(14n+11) h3{
+.pr-root .pr-page:nth-child(14n+11) h1, .pr-root .pr-page:nth-child(14n+11) h2, .pr-root .pr-page:nth-child(14n+11) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+11) a{
+.pr-root .pr-page:nth-child(14n+11) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+12){
+.pr-root .pr-page:nth-child(14n+12){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+12) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+12) .pr-page-background{
     background-color: #adbf60;
     
 }
 
-.pr-src .pr-page:nth-child(14n+12) h1, .pr-src .pr-page:nth-child(14n+12) h2, .pr-src .pr-page:nth-child(14n+12) h3{
+.pr-root .pr-page:nth-child(14n+12) h1, .pr-root .pr-page:nth-child(14n+12) h2, .pr-root .pr-page:nth-child(14n+12) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+12) a{
+.pr-root .pr-page:nth-child(14n+12) a{
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+13){
+.pr-root .pr-page:nth-child(14n+13){
     color: #FFF;
     
 }
 
-.pr-src .pr-page:nth-child(14n+13) .pr-page-background{
+.pr-root .pr-page:nth-child(14n+13) .pr-page-background{
     background-color: #6bbf60;
     
 }
 
-.pr-src .pr-page:nth-child(14n+13) h1, .pr-src .pr-page:nth-child(14n+13) h2, .pr-src .pr-page:nth-child(14n+13) h3{
+.pr-root .pr-page:nth-child(14n+13) h1, .pr-root .pr-page:nth-child(14n+13) h2, .pr-root .pr-page:nth-child(14n+13) h3{
     color: rgba(255,255,255,0.33);
     
 }
 
-.pr-src .pr-page:nth-child(14n+13) a{
+.pr-root .pr-page:nth-child(14n+13) a{
     color: #FFF;
     
 }
