--- a/assets/src/parari.css/base.css
+++ b/assets/src/parari.css/base.css
@@ -59,8 +59,9 @@ li {
     min-width: 120px;
 }
 
-.pr-src,
+.pr-root,
 .pr-screen .canvas-container {
+    background-color: #DDD;
     max-width: 960px;
     margin: 0 auto;
     display: block;
@@ -87,7 +88,6 @@ li {
     transition: opacity 300ms ease;
 
     background-color: white;
-/ / FIXME
 }
 
 .pr-screen .lower-canvas {
@@ -117,4 +117,27 @@ li {
     height: 100%;
     position: absolute;
     z-index: -1;
+}
+
+.pr-message-div {
+    text-align: center;
+    padding: 12px 10px;
+    background-color: #FDFDFD;
+    color: #B5B5B5;
+    border: 1px solid #B5B5B5;
+    font-family: sans-serif;
+    font-weight: 100 ! important;
+    font-size: 0.5em;
+
+}
+
+.pr-message-div a {
+    color: #598faa;
+}
+
+.pr-message-div .pr-caution {
+    display: block;
+    text-align: center;
+    font-size: 2em;
+    line-height: 1em;
 }
