--- a/assets/src/parari.js/.20.layers.js.hbs
+++ b/assets/src/parari.js/.20.layers.js.hbs
@@ -1,7 +1,7 @@
 /**
  * Parari layers.
  * @memberof parari
- * @constructor layers
+ * @member layers
  */
 (function (pr, document) {
     "use strict";
