--- a/assets/src/parari.css/base.css
+++ b/assets/src/parari.css/base.css
@@ -69,6 +69,10 @@ li {
     height: auto;
 }
 
+.pr-src .pr-page .pr-page-background {
+    background-color: transparent !important;
+}
+
 .pr-screen {
     position: fixed;
     top: 0;
@@ -77,7 +81,6 @@ li {
     height: 100%;
     box-sizing: border-box;
     background-color: rgb(70, 70, 70);
-    opacity: 0.9; /** FIXME*/
 }
 
 .pr-canvas-container canvas {
